# Faultline

./: .gitignore  DEPLOY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
analysis/: config.yaml
faultline/: __init__.py  cli.py  sweep.py
faultline/analysis/: __init__.py  aggregate.py  report.py  stats.py
faultline/harness/: __init__.py  agents.py  faults.py  runner.py  wrapper.py
faultline/tasks/: __init__.py  checkers.py  environments.py  loader.py
faultline/telemetry/: __init__.py  signatures.py  trace.py  verdicts.py
site/: index.html  trace.html
sweeps/: v1.yaml
tasks/: flight_rebooking.yaml  order_refund.yaml  sales_report.yaml
tests/: test_analysis.py  test_harness.py  test_runner.py  test_tasks.py  test_telemetry.py
