[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "faultline"
version = "0.1.0"
description = "A fault-injection benchmark for LLM agent loops"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["anthropic>=0.40"]

[project.scripts]
faultline = "faultline.cli:main"

[tool.setuptools.packages.find]
include = ["faultline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
